--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gradient Background Generator</title>
+    <title>Linear Gradient Background Generator</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-    <h1>Background Generator</h1>
+    <h1>Linear Gradient Background Generator</h1>
     <input id="color1" type="color" name="color1" value="#00ff00">
     <input id="color2" type="color" name="color2" value="#ff0000">
     <h2>Current CSS Background:</h2>
