--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Linear Gradient Background Generator</h1>
     <input id="color1" type="color" name="color1" value="#00ff00">
     <input id="color2" type="color" name="color2" value="#ff0000">
-    <h2>Current CSS Background:</h2>
+    <h2>CSS Code:</h2>
     <h3 id="css"></h3>
     <button id="random">Generate Random</button>
 
