--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Linear Gradient Background Generator</h1>
+    <h1>Find Your Gradient Background!</h1>
     <input id="color1" type="color" name="color1" value="#00ff00">
     <input id="color2" type="color" name="color2" value="#ff0000">
     <h2>CSS Code:</h2>
